--- a/.github/workflows/cypress-report.yml
+++ b/.github/workflows/cypress-report.yml
@@ -21,7 +21,7 @@ jobs:
           $(npm bin)/cypress verify
       
       - name: Run cypress test
-        run: npm run test:chrome
+        run: npm run test:firefox
         continue-on-error: false          
       
       - name: Merge test reports
