--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -1,25 +1,47 @@
-# This workflow will do a clean install of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-action
-
-name: Testing Cypress Sauce Demo
-on: 
+name: Create Cypress report
+on:
   push:
     branches:
       - 'main'
-      
-jobs:
-  cypress-run:
-    name: Cypress run
-    runs-on: ubuntu-latest
-    container: cypress/browsers:node16.5.0-chrome94-ff93
-    steps:
-     -  name: Checkout
-        uses: actions/checkout@v2
 
-     - name: Cypress run
-       uses: cypress-io/github-action@v2
-       with:
-          project: cypress/integration/3-sauce-demo/cekout1.spec.js
+jobs:
+  cypress-e2e-chrome81:
+    name: Run on Chrome 81
+    runs-on: ubuntu-18.04
+    container: cypress/browsers:node12.16.2-chrome81-ff75
+    steps:
+      
+    - uses: actions/checkout@v2  
+  
+    - name: Install a project with a clean slate
+      run: |
+        npm ci
+        $(npm bin)/cypress cache path
+        $(npm bin)/cypress cache list
+        $(npm bin)/cypress verify    
+        
+    - name: Run Cypress tests
+      run: npm run test:chrome
+      continue-on-error: true    
+      
+    - name: Copy test execution videos
+      run: |
+        mkdir public
+        cp -r cypress/integration/3-sauce-demo/ 
+    
+    - name: Merge test results into one
+      run: npm run report:merge    
+      
+    - name: Generate HTML report
+      run: npm run report:generate    
+      
+    - name: Deploy report page
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./public
+        user_name: 'github-actions[bot]'
+        user_email: 'github-actions[bot]@users.noreply.github.com'
  
         
         
