--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -1,47 +1,14 @@
-name: Create Cypress report
-on:
-  push:
-    branches:
-      - 'main'
+name: Cypress Tests
+
+on: [push]
 
 jobs:
-  cypress-e2e-chrome81:
-    name: Run on Chrome 81
-    runs-on: ubuntu-18.04
-    container: cypress/browsers:node12.16.2-chrome81-ff75
+  cypress-run:
+    runs-on: ubuntu-latest
     steps:
-      
-    - uses: actions/checkout@v2  
-  
-    - name: Install a project with a clean slate
-      run: |
-        npm ci
-        $(npm bin)/cypress cache path
-        $(npm bin)/cypress cache list
-        $(npm bin)/cypress verify    
-        
-    - name: Run Cypress tests
-      run: npm run test:chrome
-      continue-on-error: true    
-      
-    - name: Copy test execution videos
-      run: |
-        mkdir public
-        cp -r cypress/integration/3-sauce-demo/ 
-    
-    - name: Merge test results into one
-      run: npm run report:merge    
-      
-    - name: Generate HTML report
-      run: npm run report:generate    
-      
-    - name: Deploy report page
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./public
-        user_name: 'github-actions[bot]'
-        user_email: 'github-actions[bot]@users.noreply.github.com'
- 
-        
-        
+      - name: Checkout
+        uses: actions/checkout@v2
+      # Install NPM dependencies, cache them correctly
+      # and run all Cypress tests
+      - name: Cypress run
+        uses: cypress-io/github-action@v2
